main photo fix position on tablets

--- a/src/blocks/first-screen/first-screen.scss
+++ b/src/blocks/first-screen/first-screen.scss
@@ -47,7 +47,7 @@
     position: absolute;
     top: 25%;
     height: 540px;
-    transform: translateX(60px);
+    transform: translateX(250px);
   }
 }
 
