--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,5 +6,5 @@ $text-color-dark: #283136;
 $text-color-light: #fff;
 
 $desktop-width: 1224px;
-$table-width: 760px;
+$table-width: 768px;
 $mobile-width: 650px;
